--- a/app/src/main/res/layout/stock_row.xml
+++ b/app/src/main/res/layout/stock_row.xml
@@ -7,7 +7,20 @@
 
     <TextView
         android:id="@+id/ticker"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/quantity"
+        android:textSize="14sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/price"
+        android:textSize="14sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
